- fixed upgrade removing test related completion condition
- Fixed issue in user reports about displaying lessons/courses that currentUser professor is not assigned to (#957)
- Fixed issue about mean time duration in reports
- Fixed js issue about loading blocks in layout page
- Fixed issue about course info link in course reports for professors
- Fixed js error in sidebar for IE

=== Version 3.6.7 build 9141 ===
- Fixed issue about displaying announcement title in popup when there is not body data
- Fixed issue in Lesson registration block in admin control panel about courses enrollments not approved from admin
- Added code for deleting rows from module_hcd_course_to_job_description and module_hcd_course_to_branch when deleting a course
- Fixed issue about displaying the online users in sidebar
- Fixed issue about unit names containing double quotes in IE
- Fixed issue with assigning skills to all job positions 'described as' (#785)
- Removed group reports link from sidebar in community++ edition
- Fixed issue about displaying certificate expiration title in community++ edition
- Fixed issue about file manager in content page about not displaying files in subfolders correctly
- Revert insert to editor icon in operations column since it was not appeared in subfolders
- Fixed issue about news with cleared expire date not displayed in control panel
- Fixed issue about calendar events from news not displayed in students
- Fixed issue about displaying general forums in students/professors
- Fixed issue about displaying archived assigns for lessons/users in users table list (number of lessons/courses columns)
- Fixed issue about editing an announcement and adding it also in calendar
- Fixed issue about filename displayed when downloading file (#834)
- Applied workaround for PHP bug #48697 regarding mbstring internal encoding being reset after calling parse_str
- Fixed lesson layout not being saved